# formaskell

./: README.markdown  cabal.project  cabal.project.freeze  flake.nix  formaskell.cabal  hasklean.cabal  hie.yaml
app/: Main.hs
data/: formaskell.yaml  hasklean.yaml
src/: Formaskell.hs  Hasklean.hs
src/Formaskell/: Align.hs  Block.hs  Comments.hs  Config.hs  Editor.hs  GHC.hs  Module.hs  Ordering.hs  Parse.hs  Printer.hs  Step.hs  Util.hs  Verbose.hs
src/Formaskell/Step/: Imports.hs  LanguagePragmas.hs  ModuleHeader.hs  TrailingWhitespace.hs
src/Hasklean/: Align.hs  Block.hs  Comments.hs  Config.hs  Editor.hs  GHC.hs  Module.hs  Ordering.hs  Parse.hs  Printer.hs  Step.hs  Util.hs  Verbose.hs
src/Hasklean/Step/: Imports.hs  LanguagePragmas.hs  ModuleHeader.hs  Tabs.hs  TrailingWhitespace.hs
test/: Test.hs
