cabal-version:      2.4
name:               hasklean
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license: Apache-2.0
license-files: LICENSE

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

common lang
  default-language:     Haskell2010
  ghc-options:          -Wall

library
  import: lang
  exposed-modules:
    Hasklean
    Hasklean.Align
    Hasklean.Block
    Hasklean.Comments
    Hasklean.Config
    Hasklean.Editor
    Hasklean.GHC
    Hasklean.Module
    Hasklean.Ordering
    Hasklean.Parse
    Hasklean.Printer
    Hasklean.Step
    Hasklean.Step.Imports
    Hasklean.Step.LanguagePragmas
    Hasklean.Step.ModuleHeader
    Hasklean.Step.TrailingWhitespace
    Hasklean.Util
    Hasklean.Verbose
  build-depends:
    aeson,
    base,
    bytestring,
    Cabal,
    containers,
    directory,
    filepath,
    file-embed,
    ghc-lib-parser,
    ghc-lib-parser-ex,
    mtl,
    regex-tdfa,
    syb,
    text,
    HsYAML-aeson,
    HsYAML,
  hs-source-dirs: src


executable hasklean
  import: lang
  main-is: Main.hs
  hs-source-dirs: app
  build-depends:
    base,
    hasklean,
    strict,
    optparse-applicative,
    bytestring
